# Civic-Sentinel

./: README.md  example-report.html  example-report.json  pyproject.toml
civic-sentinel/: __init__.py  checks.py  cli.py  models.py  network.py  report.py  scanner.py  scoring.py  target.py
tests/: test_scoring.py  test_target.py
